# megalos

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  MANIFEST.in  Makefile  README.md  agora-ui-version.txt  deploy.sh  gemini-extension.json  install.sh  mikros.py  pyproject.toml
.claude/: settings.json
.gemini/: settings.json
ci/: no_raw_session_id_in_logs.sh
docs/: AUTHORING.md  CONFIGURATION.md  IDE_SETUP.md  deploying-a-domain-server.md  panel.md  selection_authoring_protocol.md
megalos_panel/: __init__.py  concurrency.py  panel.py  retry.py  throttle.py
megalos_server/: MCP.md  README.md  SCHEMA.md  __init__.py  db.py  diagram.py  dryrun.py  errors.py  main.py  mcp_client.py  middleware.py  schema.py  state.py  static_handler.py  tools.py  validate.py
mikros_server/: __init__.py  main.py  tools.py  validate.py
schemas/: megalos-workflow.schema.json
scripts/: build-agora-ui.sh  smoke-wheel.sh  smoke_endpoint.py
server/: main.py  schema.py  state.py  tools.py  validate.py
simplicity-guard/: README.md  SKILL.md  gemini-extension.json
tests/: conftest.py  run_all.sh  test_anti_patterns.sh  test_blog_workflow.py  test_branching.py  test_capability_token_model.py  test_caveman_phase.sh  test_concurrency.py  test_context_injection.py  test_conversation_repair.py  test_crash_recovery.py  test_create_app.py  test_db_schema.py  test_decision_workflow.py  test_demo_m005.py  test_demo_workflows.py  test_diagram.py  test_directives.py  test_dryrun.py  test_essay_workflow.py  test_eviction.py  test_fingerprint_dormant_replay.py  test_gemini_extension.sh  test_guardrails.py  test_import_hermeticity.py  test_install.sh  test_integration.sh  test_intermediate_artifacts.py  test_list_workflows.py  test_loc_budget.sh  test_m004_s03_contract_paths.py  test_mcp_client.py  test_mcp_json.sh  test_mcp_tools.py  test_mikros.sh  test_panel_adapters.py  test_panel_retry.py  (+35 more)
(+82 files in other folders)
