[project]
name = "megalos-server"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.3",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["megalos_server*"]

[tool.setuptools.package-data]
megalos_server = ["workflows/*.yaml", "*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["megalos_server"]
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = false
